Remove CNAME and prepare for deployment

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # Google API Client ID (required for YouTube API)
-VITE_GOOGLE_CLIENT_ID=954912468156-vlus6l0ksd4s73kstb5dft4fsiq4bodn.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_ID=1038450463409-3o3vhf06h83ea9caanhvtcp6m25hnqao.apps.googleusercontent.com
+
+# YouTube API Key
+VITE_YOUTUBE_API_KEY=AIzaSyDuKyWrq9hRwcaIaX2PuDraHoqJTIVFwAQ
