--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,16 @@ jobs:
           VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
           VITE_YOUTUBE_API_KEY: ${{ secrets.VITE_YOUTUBE_API_KEY }}
           VITE_GOOGLE_CLIENT_SECRET: ${{ secrets.VITE_GOOGLE_CLIENT_SECRET }}
+          VITE_GOOGLE_REFRESH_TOKEN: ${{ secrets.VITE_GOOGLE_REFRESH_TOKEN }}
+          VITE_GOOGLE_ACCESS_TOKEN: ${{ secrets.VITE_GOOGLE_ACCESS_TOKEN }}
           
       - name: Create .env file
         run: |
           echo "VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}" >> .env
           echo "VITE_YOUTUBE_API_KEY=${{ secrets.VITE_YOUTUBE_API_KEY }}" >> .env
           echo "VITE_GOOGLE_CLIENT_SECRET=${{ secrets.VITE_GOOGLE_CLIENT_SECRET }}" >> .env
+          echo "VITE_GOOGLE_REFRESH_TOKEN=${{ secrets.VITE_GOOGLE_REFRESH_TOKEN }}" >> .env
+          echo "VITE_GOOGLE_ACCESS_TOKEN=${{ secrets.VITE_GOOGLE_ACCESS_TOKEN }}" >> .env
           
       - name: Deploy to Server
         uses: appleboy/scp-action@v0.1.7
